--- a/Frontend/src/styles/aceEditorStyles.css
+++ b/Frontend/src/styles/aceEditorStyles.css
@@ -2,63 +2,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding-top: 10px;
     margin: auto;
+    height: 27rem;
+    /* --color: #E1E1E1;
+  background-color: #F3F3F3;
+  background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
+      linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
+  background-size: 55px 55px; */
   }
   
   .gcode-editor .ace_editor {
     width: 100%;
     max-width: 800px; 
-    height: 500px; 
-    border: 1px solid #d4d4d4;
+    height: 27rem; 
+    border: 2px solid #000000;
+    border-radius: 10px;
     margin-bottom: 20px;
-  }
-  
-  .save-section button {
-  
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 10px 20px;
-  }
-  
-  .save-section input[type="text"] {
-    padding: 10px 20px;
-    font-size: 16px;
-    margin-left: 10px;
-    margin-top: 10px;
-  }
-  
-  .gcode-editor .save-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    width: 100%; 
-    flex-wrap: wrap;
+    
   }
   
   
   @media (max-width: 1000px) {
+    .gcode-editor{
+      max-width: 20rem;
+    }
     .gcode-editor .ace_editor {
-      height: 300px; 
-      max-width: 600px
+      height: 20rem; 
+      max-width: 20rem;
     }
-    
-    .gcode-editor button {
-      font-size: 14px;
-    }
-  
-    .gcode-editor input[type="text"] {
-      font-size: 14px;
-      margin-top: 8px;
-      margin-bottom: 8px;
-    }
-  
   }
+    
   
   /* Zusätzliche Stile für die Syntaxhervorhebung, falls nötig */
   .gcode-editor .ace_command {
