--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -119,3 +119,27 @@
 }
 
 
+.custom-button {
+    padding: 7px 2px;
+    border-radius: 8px;
+    font-size: 17px;
+    font-weight: 500;
+    color: #ffffff80;
+    text-shadow: none;
+    background: transparent;
+    cursor: pointer;
+    box-shadow: transparent;
+    border: 1px solid #000000;
+    transition: 0.5s ease;
+    user-select: none;
+  }
+  
+  .custom-button:active {
+    color: #ffffff;
+    background: #008cff;
+    border: 1px solid #008cff;
+    text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff;
+    box-shadow: 0 0 5px #008cff, 0 0 10px #008cff, 0 0 10px #008cff,
+      0 0 20px #008cff;
+  }
+  
