--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -232,4 +232,73 @@
     cursor: pointer;
     font-size: 16px;
   }
-  
+  .powerswitch {
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    height: 34px;
+    margin-left: 10px;  
+   }
+   
+   .powerswitch input {
+    display: none;
+   }
+   
+   .powerslider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #3C3C3C;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+   }
+   
+   .powerslider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+   }
+   
+   input:checked + .powerslider {
+    background-color: #0E6EB8;
+   }
+   
+   input:focus + .powerslider {
+    box-shadow: 0 0 1px #2196F3;
+   }
+   
+   input:checked + .powerslider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(85px);
+   }
+   
+   /*------ ADDED CSS ---------*/
+   .powerslider:after {
+    content: 'DISABLED';
+    color: white;
+    display: block;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    font-size: 10px;
+    font-family: Verdana, sans-serif;
+   }
+   
+   input:checked + .powerslider:after {
+    content: 'ENABLED';
+   }
+   
+   /*--------- END --------*/
